--- a/examples/dynamic-examples.htm
+++ b/examples/dynamic-examples.htm
@@ -213,8 +213,8 @@
 		}
 	    }, coastLineId);
 
-//	    layerTree.removeLayer2(shellFishCages);
-//	    layerTree.removeLayer2(overlaysLayerId);
+//	    theControl.removeLayer2(shellFishCages);
+//	    theControl.removeLayer2(overlaysLayerId);
 
 
 	</script>
